RTS-5370 Stopped overflow in construction table
After specializations were introduced in study programmes the layout of
the construction table broke. We needed some more logic to calculate
the markup of the table correctly and additional styling to reflect the
changes in markup.

--- a/themes/uib_zen/sass/pages.scss
+++ b/themes/uib_zen/sass/pages.scss
@@ -512,6 +512,21 @@ $uib-study-construction-zebra-light-color: #f2f2f2;
   .uib-cell-indent-3 {
     width: 3%;
   }
+  .uib-cell-indent-4 {
+    width: 4%;
+  }
+  .uib-cell-indent-5 {
+    width: 5%;
+  }
+  .uib-cell-indent-6 {
+    width: 6%;
+  }
+  .uib-cell-indent-7 {
+    width: 7%;
+  }
+  .uib-cell-indent-8 {
+    width: 8%;
+  }
   .uib-cell-indent-1 + td,
   .uib-cell-indent-2 + td {
     background: #94b7c4;
